--- a/.dvc/config
+++ b/.dvc/config
@@ -2,3 +2,5 @@
     remote = myremote
 ['remote "myremote"']
     url = /Users/ashutoshdeoghare/Documents/dvc
+['remote "localremote"']
+    url = C:\Users\ashu1\OneDrive\Desktop\Work\dvc
