--- a/dvc.yaml
+++ b/dvc.yaml
@@ -10,12 +10,14 @@ stages:
   data_prep:
     cmd: python src/data_prep.py
     deps:
+    - data/raw
     - src/data_prep.py
     outs:
     - data/processed
   model_building:
     cmd: python model/model_building.py
     deps:
+    - data/processed
     - model/model_building.py
     params:
     - model_building.n_estimators
@@ -24,6 +26,7 @@ stages:
   model_eval:
     cmd: python model/model_eval.py
     deps:
+    - models/model.pkl
     - model/model_eval.py
     outs:
     - reports/run_info.json
