--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
   project_testing:
     runs-on: ${{ matrix.os }}
 
-    stratergy:
+    strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
 
