Correcting github dataset url

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,6 @@ jobs:
 
       - name: Run DVC Pipeline
         env:
-          CI_Pipeline: ${{secrets.CI_Pipeline}}
+          MLOPS_TOKEN: ${{secrets.MLOPS_TOKEN}}
         run: |
           dvc repro
